--- a/for_restaurant_shopapp/web/index.html
+++ b/for_restaurant_shopapp/web/index.html
@@ -40,6 +40,25 @@
       });
     }
   </script>
+  <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyD82OEZRUk7JxrYslAYOgSI0DzBV7Vxnxo",
+    authDomain: "forrestaurant-f755a.firebaseapp.com",
+    projectId: "forrestaurant-f755a",
+    storageBucket: "forrestaurant-f755a.appspot.com",
+    messagingSenderId: "218117024919",
+    appId: "1:218117024919:web:f69845c786c7323c430dd2"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
